pyrene/src/components/Button/button.css
@import '../../styles/colors.css';

.buttonContainer {
  position: relative;

  & .loader {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

.button {
  composes: commonFontSettings from '../../styles/common.css';

  box-sizing: border-box;
  height: 32px;
  padding: 8px 16px;
  border-radius: 2px;
  border: none;
  display: flex;
  align-items: center;

  cursor: pointer;

  &:focus {
    outline: 0;
  }

  & .label {
    font-size: 12px;
    font-weight: bold;
    line-height: normal;
    letter-spacing: 1px;
    text-transform: uppercase;
    display: inline-block;
  }

  &.loading {
    & .label, & .icon {
      visibility: hidden;
    }
    opacity: 0.5;
    pointer-events: none;
  }

  & .icon {
    font-size: 16px;
    margin-right: 8px;
    width: 16px;
    height: 16px;
    display: inline-block;
  }

  &.disabled {
    opacity: .5;
    cursor: default;
    pointer-events: none; /* deactivate hover */
  }

  &.type-primary {
    background-color: var(--blue-500);
    color: var(--neutral-000);

    &:hover {
      background-color: var(--blue-600);
    }
  }

  &.type-secondary {
    background-color: var(--neutral-030);
    color: var(--neutral-300);

    &:hover {
      background-color: var(--neutral-050);
    }
  }

  &.type-danger {
    background-color: var(--red-500);
    color: var(--neutral-000);

    &:hover {
      background-color: var(--red-600);
    }
  }

  &.type-ghost {
    background-color: var(--neutral-000);
    color: var(--blue-500);

    &:hover {
      background-color: var(--neutral-030);
    }
  }

  &.type-action {
    padding-left: 8px;
    padding-right: 8px;
    background-color: var(--neutral-000);
    color: var(--blue-500);

    &:hover {
      background-color: var(--neutral-030);
    }

    &.disabled {
      box-shadow: inset 0 0 0 1px var(--neutral-050);
    }

    & .label {
      height: 16px;
    }
  }

  &.type-admin {
    height: 24px;
    padding: 0 8px 0 8px;

    background-color: var(--neutral-000);
    color: var(--red-500);

    /* Box-shadow used as border messes up the layout. ! 0px border needed so box-shadow gets displayed! */
    border: solid 0;
    box-shadow:
            inset 1px 0 0 0,
            inset -1px 0 0 0,
            inset 0 1px 0 0,
            inset 0 -1px 0 0;

    &:hover {
      background-color: var(--red-050);
    }
  }

  &.type-action .label, &.type-admin .label {
    font-size: 14px;
    font-weight: 600;
    letter-spacing: normal;
    text-transform: capitalize;
  }
}

